# capn-crunch

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/capn_crunch/: __init__.py  core.py
tests/: test_package.py
